--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  /*display: flex;*/
+  display: flex;
 }
 
 .App-logo {
@@ -23,7 +23,9 @@
 .App-link {
   color: #61dafb;
 }
-
+.grid-container {
+  width: 100% ;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
